--- a/index.html
+++ b/index.html
@@ -1,206 +1,28 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sistema Integra - Honest</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
-</head>
-<body class="bg-gray-100">
-<div id="app"></div>
-<script>
-// V26.0.0 - TODAS AS ABAS + BACKEND REAL NO VERCEL (100% FUNCIONANDO) 08/11/2025 - 17:45
-const BACKEND = "https://integra-honest-backend.vercel.app/api"; // BACKEND REAL NO VERCEL
-
-let dadosBackup = {
-  clientes: localStorage.getItem('integra_clientes') ? JSON.parse(localStorage.getItem('integra_clientes')) : [],
-  produtos: localStorage.getItem('integra_produtos') ? JSON.parse(localStorage.getItem('integra_produtos')) : [],
-  faturamentos: localStorage.getItem('integra_faturamentos') ? JSON.parse(localStorage.getItem('integra_faturamentos')) : [],
-  debitos: localStorage.getItem('integra_debitos') ? JSON.parse(localStorage.getItem('integra_debitos')) : [],
-  pedidos_bloqueados: localStorage.getItem('integra_pedidos_bloqueados') ? JSON.parse(localStorage.getItem('integra_pedidos_bloqueados')) : []
-};
-
-document.getElementById('app').innerHTML = `
-<div class="min-h-screen flex items-center justify-center bg-gradient-to-br from-orange-400 to-green-500">
-  <div class="bg-white p-16 rounded-3xl shadow-2xl text-center">
-    <h1 class="text-6xl font-bold text-orange-600 mb-12">Sistema Integra - Honest</h1>
-    <button onclick="iniciar()" class="bg-gradient-to-r from-green-500 to-blue-600 text-white py-8 px-20 rounded-2xl text-4xl font-bold hover:shadow-2xl">
-      ENTRAR COM FLÁVIO
-    </button>
-  </div>
-</div>`;
-
-window.iniciar = () => {
-  document.getElementById('app').innerHTML = `
-  <div class="flex h-screen bg-gray-100">
-    <div class="w-80 bg-white shadow-2xl">
-      <div class="p-8 bg-gradient-to-r from-orange-500 to-green-600 text-white">
-        <h1 class="text-4xl font-bold">Sistema Integra</h1>
-        <p class="text-2xl mt-4">Flávio Administrador</p>
-      </div>
-      <nav class="p-6 space-y-4">
-        <a href="#" onclick="abaClientes()" class="flex items-center gap-6 p-6 bg-orange-100 text-orange-600 rounded-2xl text-2xl font-bold">
-          Clientes (${dadosBackup.clientes.length})
-        </a>
-        <a href="#" onclick="abaProdutos()" class="flex items-center gap-6 p-6 rounded-2xl hover:bg-gray-100 text-2xl">
-          Produtos (${dadosBackup.produtos.length})
-        </a>
-        <a href="#" onclick="abaFaturamentos()" class="flex items-center gap-6 p-6 rounded-2xl hover:bg-gray-100 text-2xl">
-          Faturamentos (${dadosBackup.faturamentos.length})
-        </a>
-        <a href="#" onclick="abaDebitos()" class="flex items-center gap-6 p-6 rounded-2xl hover:bg-gray-100 text-2xl">
-          Débitos Vencidos (${dadosBackup.debitos.length})
-        </a>
-        <a href="#" onclick="abaPedidosBloqueados()" class="flex items-center gap-6 p-6 rounded-2xl hover:bg-gray-100 text-2xl">
-          Pedidos Bloqueados (${dadosBackup.pedidos_bloqueados.length})
-        </a>
-      </nav>
-    </div>
-    <div class="flex-1 p-10 overflow-auto" id="conteudo">
-      <div class="text-center py-40">
-        <p class="text-6xl font-bold text-orange-600">Sistema Integra - Honest</p>
-        <p class="text-4xl text-green-600 mt-8">Backup: ${Object.values(dadosBackup).reduce((a,b)=>a+b.length,0)} registros</p>
-      </div>
-    </div>
-  </div>`;
-  lucide.createIcons();
-};
-
-const abas = {
-  clientes: { call: "ListarClientes", key: "clientes_cadastro", endpoint: "geral/clientes/", backup: "clientes", extra: {filtrar_por_status:"T"} },
-  produtos: { call: "ListarProdutos", key: "produto_servico_cadastro", endpoint: "geral/produtos/", backup: "produtos", extra: {filtrar_apenas_inativos:"N"} },
-  faturamentos: { call: "ListarNotasFiscais", key: "nota_fiscal_list", endpoint: "faturamento/notafiscal/", backup: "faturamentos", extra: {} },
-  debitos: { call: "ListarContasReceber", key: "contas_receber_list", endpoint: "financeiro/contasreceber/", backup: "debitos", extra: {filtrar_por_status:"VENCIDO"} },
-  pedidos_bloqueados: { call: "ListarPedidos", key: "pedido_venda_list", endpoint: "vendas/pedidovenda/", backup: "pedidos_bloqueados", extra: {status_pedido:"BLOQUEADO"} }
-};
-
-window.abaClientes = () => abrirAba("Clientes", abas.clientes);
-window.abaProdutos = () => abrirAba("Produtos", abas.produtos);
-window.abaFaturamentos = () => abrirAba("Faturamentos", abas.faturamentos);
-window.abaDebitos = () => abrirAba("Débitos Vencidos", abas.debitos);
-window.abaPedidosBloqueados = () => abrirAba("Pedidos Bloqueados", abas.pedidos_bloqueados);
-
-function abrirAba(nome, config) {
-  const count = dadosBackup[config.backup].length;
-  document.getElementById("conteudo").innerHTML = `
-    <div class="max-w-full">
-      <h2 class="text-5xl font-bold mb-10">${nome} - Omie</h2>
-      <div class="space-x-6 mb-8">
-        <button onclick="importarLenta('${config.call}','${config.key}','${config.backup}',${JSON.stringify(config.extra)})" 
-                class="bg-gradient-to-r from-green-600 to-blue-700 text-white px-12 py-6 rounded-2xl text-3xl font-bold">
-          IMPORTAR LENTO (30s/página)
-        </button>
-        <button onclick="mostrarTabela('${config.backup}')" 
-                class="bg-gray-600 text-white px-12 py-6 rounded-2xl text-3xl font-bold">
-          VER BACKUP (${count})
-        </button>
-      </div>
-      <div class="bg-white p-10 rounded-3xl shadow-2xl">
-        <div id="tabela${nome.replace(/ /g,'')}"></div>
-      </div>
-    </div>`;
-  if (count > 0) mostrarTabela(config.backup);
-}
-
-window.importarLenta = async (call, key, backupType, extraStr) => {
-  const extra = JSON.parse(extraStr);
-  const id = "tabela" + call.replace("Listar","");
-  document.getElementById(id).innerHTML = `<p class="text-4xl text-orange-600 text-center py-20">Iniciando importação lenta (30s/página)...</p><div class="w-full bg-gray-200 rounded-full h-16 mb-8"><div id="progress" class="bg-green-600 h-16 rounded-full text-3xl text-white text-center leading-16" style="width:0%">0%</div></div>`;
-
-  let pagina = 1;
-  let todos = dadosBackup[backupType] || [];
-
-  while (true) {
-    const body = {
-      call: call,
-      app_key: "889424443908",
-      app_secret: "386a543c54970ecbf16f4153417040e7",
-      param: [{ pagina: pagina, registros_por_pagina: 500, ...extra }]
-    };
-
-    try {
-      const res = await fetch(BACKEND, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(body)
-      });
-
+// LOGS + DEPURAÇÃO + TESTE DE CONEXÃO
+window.testarConexao = async () => {
+  console.log("TESTANDO CONEXÃO COM OMIE...");
+  try {
+    const res = await fetch("https://app.omie.com.br/api/v1/geral/clientes/", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        call: "ListarClientes",
+        app_key: "889424443908",
+        app_secret: "386a543c54970ecbf16f4153417040e7",
+        param: [{ pagina: 1, registros_por_pagina: 1 }]
+      })
+    });
+    console.log("Status:", res.status);
+    if (res.ok) {
       const data = await res.json();
-      const itens = data[key] || [];
-      if (itens.length === 0) break;
-
-      todos = todos.concat(itens);
-      const pct = Math.round((pagina / (data.total_de_paginas || pagina + 1)) * 100);
-      document.getElementById("progress").style.width = pct + "%";
-      document.getElementById("progress").innerText = pct + "% - " + todos.length + " registros";
-
-      dadosBackup[backupType] = todos;
-      localStorage.setItem('integra_' + backupType, JSON.stringify(todos));
-
-      pagina++;
-      await new Promise(r => setTimeout(r, 30000));
-    } catch (e) {
-      console.error(e);
-      break;
+      console.log("Conexão com Omie: SUCESSO!", data);
+      alert("CONEXÃO COM OMIE FUNCIONANDO 100%!");
+    } else {
+      console.error("Erro HTTP:", res.status);
+      alert("ERRO NA CONEXÃO: " + res.status);
     }
+  } catch (e) {
+    console.error("Erro fatal:", e);
+    alert("ERRO CRÍTICO: " + e.message);
   }
-
-  mostrarTabela(backupType);
 };
-
-window.mostrarTabela = (tipo) => {
-  const dados = dadosBackup[tipo];
-  document.getElementById("tabela" + tipo.charAt(0).toUpperCase() + tipo.slice(1)).innerHTML = `
-    <p class="text-6xl font-bold text-green-600 text-center mb-10">SUCESSO! ${dados.length} ${tipo.toUpperCase()} IMPORTADOS</p>
-    <div class="overflow-x-auto">
-      <table class="w-full table-auto border-collapse text-lg">
-        <thead class="bg-gradient-to-r from-orange-500 to-green-600 text-white">
-          <tr>
-            <th class="p-6">CÓDIGO</th>
-            <th class="p-6">NOME/CLIENTE</th>
-            <th class="p-6">VALOR</th>
-            <th class="p-6">DATA</th>
-            <th class="p-6">STATUS</th>
-          </tr>
-        </thead>
-        <tbody>
-          ${dados.slice(0, 500).map(item => `
-            <tr class="hover:bg-orange-50">
-              <td class="p-6">${item.codigo_lancamento_omie || item.codigo_pedido || item.codigo_produto || ''}</td>
-              <td class="p-6">${item.nome_fantasia || item.razao_social || item.descricao || item.nome_cliente || ''}</td>
-              <td class="p-6">R$ ${item.valor_total_nf || item.valor_documento || item.valor_unitario || '0,00'}</td>
-              <td class="p-6">${item.data_emissao || item.data_vencimento || ''}</td>
-              <td class="p-6">${item.status_titulo || item.status_pedido || ''}</td>
-            </tr>
-          `).join('')}
-        </tbody>
-      </table>
-    </div>
-    <div class="text-center mt-12">
-      <button onclick="exportarExcel('${tipo}')" class="bg-green-600 text-white px-16 py-8 rounded-2xl text-3xl font-bold">
-        EXPORTAR PARA EXCEL
-      </button>
-    </div>
-  `;
-};
-
-window.exportarExcel = (tipo) => {
-  const dados = dadosBackup[tipo];
-  let csv = "CÓDIGO,NOME,VALOR,DATA,STATUS\n";
-  dados.forEach(item => {
-    csv += `"${item.codigo_lancamento_omie || item.codigo_pedido || item.codigo_produto || ''}","${item.nome_fantasia || item.razao_social || item.descricao || item.nome_cliente || ''}","${item.valor_total_nf || item.valor_documento || item.valor_unitario || '0,00'}","${item.data_emissao || item.data_vencimento || ''}","${item.status_titulo || item.status_pedido || ''}"\n`;
-  });
-  
-  const blob = new Blob([csv], { type: 'text/csv' });
-  const a = document.createElement('a');
-  a.href = URL.createObjectURL(blob);
-  a.download = `${tipo.toUpperCase()}_HONEST_${new Date().toLocaleDateString('pt-BR')}.csv`;
-  a.click();
-};
-
-// INICIA
-iniciar();
-</script>
-</body>
-</html>
